Schedule fetch as a single fetch task for all refs in a batch
Bug: Issue 40015567
Change-Id: Ifd2a28a6337f762d89d744934f44b7f2b47e6e6a